# IntegrityMark

./: .gitignore  README.md  pyproject.toml  train.py
config/: 0+0+4.yaml  0+0+4_stage1_basic.yaml  0+0+4_stage2_augment.yaml  0+0+4_stage3_final.yaml  augmentation.yaml  basic.yaml  dataset.yaml  eval.yaml  model.yaml  seanet_wm.yaml  sweep.yaml
dataset/: README.txt  data.py  datasets
dataset/Voxpopuli/: test  train
distortions/: audio_effects.py  audio_utils.py  dl.py  frequency.py  mel_transform.py
eval/: __init__.py  eval.py  eval_cross_domain.py  eval_cross_source_attack.py  eval_cross_source_attack_audioseal.py  eval_cross_source_attack_distortion.py  eval_cross_source_attack_domain.py  eval_detection_speed.py  eval_distortion.py  eval_distortion_audioseal.py  eval_in_source_attack.py  eval_in_source_attack_distortion.py  eval_in_source_attack_domain.py  eval_language.py
losses/: loss.py  sisnr.py  wav2vec_perceploss.py
models/: AdvBuilder.py  WMbuilder.py
models/modules/: WM1d.py  WM2d.py  blocks.py  demucs.py  modules.py  msstft.py  resample.py  seanet.py
utils/: audio_tamper_attack.py  checkpoints.py  cross_source_detection.py  in_source_detection.py  logger.py  metric.py  optimizer.py  tools.py  wm_process.py
